@@ -351,7 +351,11 @@ key	binding
 (defun howm-list-all ()
   (interactive)
   (howm-set-command 'howm-list-all)
-  (howm-normalize-show "" (howm-all-items))
+  (let ((all-items (howm-all-items)))
+    (when (null all-items)
+      ;; (howm-menu)  ;; for beginners' convenience
+      (error "No notes yet."))
+    (howm-normalize-show "" all-items))
   ;; for backward compatibility
   (cond ((howm-list-title-p) t)  ;; already done in howm-normalize-show
         (howm-list-all-title (howm-list-title-internal))))
@@ -367,8 +371,12 @@ key	binding
          (now (current-time))
          (from (howm-days-before now d))
          (item-list (howm-recent-items-filter
-                     (howm-folder-items howm-directory t))))
-    (howm-normalize-show "" (howm-filter-items-by-mtime item-list from now))
+                     (howm-folder-items howm-directory t)))
+         (recent-items (howm-filter-items-by-mtime item-list from now)))
+    (when (null recent-items)
+      ;; (howm-menu)  ;; for beginners' convenience
+      (error "No recent notes."))
+    (howm-normalize-show "" recent-items)
     ;; clean me [2003-11-30]
     (cond ((howm-list-title-p) t)  ;; already done in howm-normalize-show
           (howm-list-recent-title (howm-list-title-internal))
